--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <titlet>First Website</titlet></title>
-</head>
-<body>
-<h1>Hello Coursera</h1>    
-</body>
-</html>
+    <head>
+        <title>My first website from scratch</title>
+    </head>
+    <body>
+        <ol>
+                <li>Learn HTML</li>
+                <li>Learn CSS</li>
+                <li>Learn JavaScript</li>
+                <li>MAKE WEBSITES</li>
+        </ol>
+    </body>
