--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-    <head>
-        <title>My first website from scratch</title>
-    </head>
-    <body>
+<html>    
+<head>
+    <meta charset="utf-8">
+    <title>My first website from scratch</title>
+</head>
+
+<body>
+    <header>KRYSIS COMPANY LIMITED</header>
+    <h1>FIRST WEBSITE CREATION</h1>
+    <section>
+        <div>This is a website highlighting the steps I will
+            take in order to learn Web Development. The steps are as follows: </div>
         <ol>
-                <li>Learn HTML</li>
-                <li>Learn CSS</li>
-                <li>Learn JavaScript</li>
-                <li>MAKE WEBSITES</li>
+            <li>Setup GitHub Repository</li>
+            <li>Setup NodeJS</li>
+            <li>Connect GIT web repository to local machine</li>
+            <li>Connect BrowserSync</li>
+            <li>Learn HTML</li> 
+            <li>Learn CSS</li>
+            <li>Learn JavaScript</li>
+            <li>Write code for website</li>
+            <li>cd into directory on local machine</li>
+            <li>git add, git commit, git push</li>
+            <li>MAKE WEBSITES</li>
         </ol>
-    </body>
+    </section>
+    <section>
+        <p>Check out my linkedIn Profile:
+            <a href="https://www.linkedin.com/in/kristopher-laggan"
+            target="_blank" title="Like this">Click</a>
+        </p>
+    </section>
+
+    <footer>KRYSIS &copy;2019</footer>
+
+</body>
+
+</html>
