--- a/site/index.html
+++ b/site/index.html
@@ -26,7 +26,7 @@
         </ol>
     </section>
     <section>
-        <p>Check out my linkedIn Profile:
+        <p>Check out my LinkedIn Profile:
             <a href="https://www.linkedin.com/in/kristopher-laggan"
             target="_blank" title="Like this">Click</a>
         </p>
