--- a/site/index.html
+++ b/site/index.html
@@ -23,6 +23,7 @@
             <li>cd into directory on local machine</li>
             <li>git add, git commit, git push</li>
             <li>MAKE WEBSITES</li>
+            <li>test</li>
         </ol>
     </section>
     <section>
