--- a/site/index.html
+++ b/site/index.html
@@ -18,7 +18,7 @@
             <li>Connect BrowserSync</li>
             <li>Learn HTML</li> 
             <li>Learn CSS</li>
-            <li>Learn JavaScript</li>
+            <li>Learn JavaScript!</li>
             <li>Write code for website</li>
             <li>cd into directory on local machine</li>
             <li>git add, git commit, git push</li>
