--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,14 @@
     <title>My first website from scratch</title>
 </head>
 
+<style>
+    h1 {
+        color: green;
+        text-align:center;
+    }
+
+</style>
+
 <body>
     <header>KRYSIS COMPANY LIMITED</header>
     <h1>FIRST WEBSITE CREATION</h1>
